# leetcode_problems

./: .gitignore  README.md  findball.h  leetcode.out  leetcode_functions.h  leetcode_main.c  longcommonprefix.h  makefile  mergesort.h  multiplystrings.h
codingQuestions/: .gitignore
codingQuestions/C/funcs/: ishappynum.c
codingQuestions/C/headers/: removeDupes.h
codingQuestions/JS/: algorithms.js  codeSignal.js  largestOfFour.js  recordsAlbums.js  testAlgs.js
codingQuestions/Java/: .gitignore  settings.gradle
codingQuestions/Java/app/: .project  build.gradle
codingQuestions/Java/src/: CodingBat.java
codingQuestions/JavaScript/: contactLookup.js  testEndingOfstring.js  titleCaseWords.js
codingQuestions/c/: .gitignore  AUTHORS  ChangeLog.md  Makefile.am  Makefile_NoAuto  NEWS  README.md  configure.ac
codingQuestions/c/funcs/: removeNthFromEnd.c
codingQuestions/c/headers/: helpers.h  removeNthFromEnd.h
codingQuestions/c/src/headers/: mergestrings.h  removeelement.h  spiralorder.h
codingQuestions/cpp/: DynamicArray.cpp  Learning.cpp
codingQuestions/csharp/: testing.cs
codingQuestions/leetcodeC/: leetcode  makefile
codingQuestions/leetcodeC/funcs/: mergesort.c  removeDupes.c
codingQuestions/python/: .gitignore
codingQuestions/src/basics/: AnnotationExample.java  Annotations.java  Basics.java  SerializedCar.java  (+1 more)
codingQuestions/testingJS/: chunkArrayInGroups.js  rot13decode.js  truncateString.js
datastructs/: ArrayList.c  LinkedList.c
datastructs/Java/: .gitignore
datastructs/c/: arrayListInt.c  hashtable.c  test-ds.c
funcs/: findball.c  helpers.c  ishappynum.c  longcommonprefix.c  mergesort.c  mergestrings.c  multiplystrings.c  removeNthFromEnd.c  removeelement.c  spiralorder.c
headers/: findball.h  helpers.h  ishappynum.h  longcommonprefix.h  mergesort.h  multiplystrings.h  removeNthFromEnd.h  spiralorder.h
leetcode/: leetcode_main.c  makefile
leetcode/funcs/: isSorted.c  multiplystrings.c  removeDupes.c
leetcode/headers/: isSorted.h
protocols/DiffieHellman/: dhOps.c
protocols/HTTP/: TODO.md  sources.txt
psql/: dump.sql  initdb.sql  populate.sql  test_queries.sql
scratch/: .gitignore  Makefile  simple_filewrite.c  typecheck  typecheck.c  very_simple_print.c
(+22 files in other folders)
