#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# WARNING: THIS IS STILL BORKEN

AC_PREREQ([2.72])
AC_INIT([coding_problems_c], [0.0.1], [kdillo893@gmail.com])
AC_CONFIG_SRCDIR([leetcode.c]) # for checking correct dir on run
AC_CONFIG_HEADERS([config.h]) # where I'm having a config header for this...
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_FUNC_MALLOC

#do this before output to finalize configure
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
